2024-01-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (AddIFDExifFields): Avoid signed/unsigned comparison warnings.

2024-01-27  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c: EXIF GPS IFD tags are copied now.

2024-01-26  Fojtik Jaroslav  <JaFojtik@yandex.com>

	tiff/libtiff/tif_dir.c: Apply Su Laus leak fix from:
	https://gitlab.com/libtiff/libtiff/-/commit/376916d25f39bab69a3ed16963fd3f186870942c

2024-01-26  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c: Refactor types to magick_uint16_t and
        magick_uint32_t.

2024-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): TIFFFreeDirectory() statements
	necessary to avoid memory leak in libtiff versions lacking merge
	request 563 "Avoiding memory leaks when using
	TIFFCreateDirectory()".

2024-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jxl.c: Directly include jxl/version.h rather than
	depending on it being implicitly included by other jxl headers.

2024-01-24  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c: Copy uint32_t and uint8_t EXIF arrays into a tiff.

2024-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Hg.rst: Change from defunct OSDN to Heptpod.
2024-01-23  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c: Copy uint16_t EXIF arrays into a tiff.

2024-01-20  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/tiff.c: Do not copy TIFFTAG_XRESOLUTION & TIFFTAG_YRESOLUTION
	that are already handled by gm functionality.

2024-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/common.sh, common.shi.in: Apply tight read and
	write file size limits during testing.

	* utilities/tests/hald-clut.tap (levels): Make messaging about
	levels more distinct during Hald CLUT testing.

	* fuzzing/utils.cc: Set a write resource limit during oss-fuzz
	testing.

	* magick/blob.c (ReadBlobByte): EOF detection requires reading
	past the end of the file, so allow for that.